--- a/app.css
+++ b/app.css
@@ -25,6 +25,7 @@
     --green: #53A623;
     --dollarBrown: #745545;
 
+    --sectionWhite: #FCF9F4;
     --headBrown: #734B33;
     --hBrown: #BB6939;
     --lBrown: #704B33;
@@ -36,7 +37,8 @@
     --inputWhite: #FCF9F4;
 }
 
-a {
+a,
+button {
     text-decoration: none;
     cursor: pointer;
     white-space: nowrap;
@@ -366,4 +368,50 @@ section .section--two {
 .section--two-para:hover .para--space {
     opacity: 0.8;
     padding-right: 0.5em;
+}
+/* Main Section Three */
+#section--three {
+    background: var(--sectionWhite);
+    padding-top: 68px;
+    padding-bottom: 135px;
+}
+section .section--three {
+    margin: 0 auto;
+    max-width: 72em; 
+}
+.section--three > h1 {
+    font-family: 'Inika', sans-serif;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 83px;
+    text-align: center;
+    align-items: center;
+    color: var(--headBrown);
+}
+.section--three > p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: center;
+    color: var(--headBrown);
+}
+.section--three-container {
+    margin-top: 76px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    gap: 81px;
+}
+.section--three-content {
+    color: var(--yellowWhite);
+    box-shadow: -2px -9px 42px 0px rgba(77, 66, 44, 0.38);
+    border-radius: 19px;
+    padding: 34px 43px 20px 43px;
+}
+.section--three-content img {
+    width: 250px;
+    height: 250px;
+    border-radius: 16px;
 }
