--- a/app.css
+++ b/app.css
@@ -60,18 +60,25 @@ header {
 .header--wrapper {
     position: relative;
     margin: 0 auto;
-    left: 92px;
-    top: 6px;
+    max-width: 70em;
 }
-nav.nav {
+.nav {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
     gap: 110px;
     position: fixed;
-    width: 80%;
+    top: 1.5em;
+    width: 70em;
     z-index: 100;
+}
+.scrolled {
+    backdrop-filter: blur(7px);
+    -webkit-backdrop-filter: blur(7px);
+    box-shadow: 0 4px 14px -8px rgba(0, 0, 0, 0.3);
+    top: 0;
+    padding: 0.5em 1em;
 }
 .nav--name img {
     width: 165px;
@@ -497,7 +504,7 @@ footer .footer--wrapper {
     background: var(--orange);
 }
 .two {
-    padding: 12px 15px;
+    padding: 12px 14px;
     background: var(--iconWhite);
 }
 .footer--contact-info p {
@@ -525,7 +532,7 @@ footer .footer--wrapper {
 }
 .F--section--two input::placeholder {
     font-family: 'Inter', sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
     line-height: 24px;
     color: #757575;
