Break through on what to do in tab and mobile mode

--- a/app.css
+++ b/app.css
@@ -50,12 +50,13 @@ li{
 body {
     background: var(--yellowWhite);
     box-shadow: 50px 50px 100px 0px rgba(0, 0, 0, 0.30), -50px -50px 100px 0px rgba(0, 0, 0, 0.30);
+    overflow: auto;
 }
 header {
     background: url('images/MAIN\ BGmainbg.png'),lightgray 50% / cover no-repeat;
     background-position: center;
-    width: min(1440px, 100%);
     height: 706px;
+    width: 100%;
 }
 .header--wrapper {
     position: relative;
@@ -67,17 +68,23 @@ header {
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
-    gap: 110px;
     position: fixed;
     top: 1.5em;
     width: 70em;
     z-index: 100;
+    transition: all 0.5s cubic-bezier(0.84, -0.15, 0.12, 1.95);
+}
+.mobile--nav,
+.nav--bar--mobile {
+    display: none;
 }
 .scrolled {
     backdrop-filter: blur(7px);
     -webkit-backdrop-filter: blur(7px);
     box-shadow: 0 4px 14px -8px rgba(0, 0, 0, 0.3);
     top: 0;
+    left: 0;
+    width: 100%;
     padding: 0.5em 1em;
 }
 .nav--name img {
@@ -141,13 +148,13 @@ header {
     flex-flow: row nowrap;
     align-items: center;
     position: relative;
-    padding-left: 126px;
+    padding-left: 10%;
 }
 .hero--section-info {
-    flex: 4 2 500px;
+    flex: 4 2 350px;
 }
 .hero--section-image {
-    flex: 2 1 200px;
+    flex: 2 1 350px;
 }
 .hero--section-info h1 {
     color: var(--brown);
@@ -211,7 +218,13 @@ header {
 /* Main : First section */
 #section--one {
     margin: 0 auto;
-    max-width: 62em;
+    max-width: 70em;
+    position: relative;
+    right: 100%;
+    transition: all 3s cubic-bezier(1, 0.71, 0, 0.84);
+}
+#section--one.active1 {
+    right: 0;
 }
 section .section--one {
     display: flex;
@@ -270,6 +283,12 @@ section .section--one {
     background: var(--bgBrown);
     padding-top: 69px;
     padding-bottom: 53px;
+    position: relative;
+    opacity: 0.2;
+    transition: all 2s cubic-bezier(0.84, -0.15, 0.12, 1.95);
+}
+#section--two.active2 {
+    opacity: 1;
 }
 section .section--two {
     margin: 0 auto;
@@ -277,7 +296,6 @@ section .section--two {
 }
 .section--two > h1 {
     text-align: center;
-    align-items: center;
     font-family: 'Inika', sans-serif;
     font-size: 64px;
     font-weight: 400;
@@ -299,10 +317,15 @@ section .section--two {
     height: 351px;
     padding: 33px 0 40px 0;
 }
+.section--two-container .container--one {
+    align-self: flex-start;
+}
+.section--two-container .container--two {
+    align-self: flex-end;
+}
 .section--two-img {
     padding-left: 96px;
     padding-right: 96px;
-    align-items: center;
 }
 .section--two-content .section--two-img img {
     width: 163px;
@@ -381,6 +404,14 @@ section .section--two {
     background: var(--sectionWhite);
     padding-top: 68px;
     padding-bottom: 135px;
+    position: relative;
+    opacity: 0.2;
+    right: 100%;
+    transition: all 2s ease-in-out;
+}
+#section--three.active3 {
+    right: 0;
+    opacity: 1;
 }
 section .section--three {
     margin: 0 auto;
@@ -459,6 +490,7 @@ section .section--three {
     background: var(--footerBrown);
     padding-top: 64px;
     padding-bottom: 34px;
+    transition: all 1s ease-in;
 }
 footer .footer--wrapper {
     margin: 0 auto;
@@ -554,4 +586,62 @@ footer .footer--wrapper {
     background: var(--orange);
     box-shadow: 0px 4px 4px 0px #00000040;
     color: #000000;
+}
+@media (max-width: 1100px) {
+    .header--wrapper {
+        padding: 0 40px;
+    }
+    .desktop {
+        display: none;
+    }
+    .mobile--nav {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+        justify-content: space-between;
+        position: fixed;
+        top: 2em;
+        width: 90%;
+        z-index: 100;
+        transition: all 0.5s cubic-bezier(0.84, -0.15, 0.12, 1.95);
+    }    
+    .nav--name img {
+        width: 100px;
+        height: 100px;
+    }
+    .nav--details {
+        display: flex;
+        align-items: center;
+    }
+    .nav--bar {
+        border-radius: 28px;
+        padding: 10px 20px 10px 20px;
+    }
+    .nav--toggle {
+        color: var(--tipBrown);
+        font-size: 2em;
+        background: transparent;
+        border: none;
+        transition: all 0.3s ease;
+        padding-left: 0.7em;
+    }
+    .nav--toggle:hover {
+        opacity: 0.6;
+    }
+    .scrolled {
+        top: 0;
+        width: 100%;
+    }
+    .hero--section {
+        flex-direction: column-reverse;
+        padding-inline: 5%;
+    }
+
+    .HSI--btn .one {
+        padding: 1em 1.5em;
+    }
+    .HSI--btn .two {
+        padding: 1em 1em 1em 1.4em;
+    }
+    
 }
